--- a/Client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/Client/src/app/core/nav-bar/nav-bar.component.scss
@@ -23,8 +23,8 @@
 .empty-cart {
   color: white;
 }
-.cart-no::before {
-  content: 'Packages in cart ';
+.cart-no::after {
+  content: ' in cart';
 }
 
 .cart-no {
